--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body class="body">
-    <div id="smooth-wrapper" data-scroll-container>
+    <div id="smooth-wrapper">
       <div id="smooth-content">
         <div class="wrapper">
           <div class="body-overlay"></div>
