--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Ремонт моей кукухи</title>
   <link href="style.css" rel="stylesheet"></head>
   <body class="body">
-    <div id="smooth-wrapper" data-scroll-container>
+    <div id="smooth-wrapper">
       <div id="smooth-content">
         <div class="wrapper">
           <div class="body-overlay"></div>
